# libsynomail

./: README.md  pyproject.toml  test.py  test2.py
libsynomail/: __init__.py  classes.py  connection.py  get_mail.py  get_mail.py.~1~  get_notes_from_d.py  nas.py  nas_def.py  register.py  register_despacho.py  scrap_register.py  send_mail.py  syneml.py
synomail/: connection.py  register_despacho.py
